module(
    name = "vimgames",
    version = "1.0",
)

bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")