module(
    name = "vimgames",
    version = "1.0",
)

bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "raylib",
    build_file = "//third_party/raylib:raylib.BUILD",
    strip_prefix = "raylib-5.5_macos",
    urls = ["https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_macos.tar.gz"],
)